# Sample_project

./: CMakeLists.txt  clean
include/: api.h  auto_canny.h
src/: main.cpp
src/lib/: api.cpp
